<resources>
    <string name="app_name">DatingApp</string>
    <string name="hello_world">Hello World! Ali, Alas 4/18/2022</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="profile_tab_name">profile</string>
    <string name="matches_tab_name">matches</string>
    <string name="settings_tab_name">settings</string>
    <string name="liked_message">You liked</string>
    <string name="this_is_where_settings_will_go">This is where Settings will go</string>
    <string name="this_is_where_matches_will_go">This is where Matches will go</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="mark_t">Mark T</string>
    <string name="really_cool_dude">Really cool dude</string>
    <string name="image_of_the_match">Image of the match</string>
    <string name="like">Like</string>
    <string name="pick_your_daily_matches_reminder_time">Pick your daily matches reminder time</string>
    <string name="set_your_maximum_distance_search_in_miles">Set your maximum distance search (in miles)</string>
    <string name="select_your_gender_preference">Select your gender preference</string>
    <string name="select_your_account_privacy_option">Select your account privacy option</string>
    <string name="set_your_interested_age_range">Set your interested age range</string>
    <string name="select_time">Select time</string>
    <string name="selected_time">Selected Time:</string>
    <string name="type_your_distance_in_miles">Type your distance in miles</string>
    <string name="he_him">He/Him</string>
    <string name="she_her">She/Her</string>
    <string name="they_them">They/Them</string>
    <string name="prefer_not_to_answer">Prefer not to answer</string>
    <string name="private_radio">Private</string>
    <string name="public_radio">Public</string>
    <string name="selected_time_message">Selected Time: %d:%s</string>
    <string name="select_reminder_time_title">Select Reminder Time</string>
    <string name="save">Save</string>
    <string name="invalid_settings">You have inputted invalid settings</string>
</resources>